Update Bloody Trail Online.html

--- a/Bloody Trail Online.html
+++ b/Bloody Trail Online.html
@@ -2,16 +2,16 @@
 <html>
     <head> 
         <title>Bloody Trail</title>
-		<style>@import url("https://drive.google.com/uc?id=12sINNRFN1CVBsaBxADEcDBV3QOnFLWqz&export=download");</style>
+		<style>@import url("https://github.com/RTemiy/bloody_trail/blob/76a506620c5b32f7a5ddd8048968090360dc242c/css/BTCSS.css");</style>
     </head>
     <body width=400>
         <meta http-equiv="content-type" content="text/html; charset=windows-1251; initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" name="viewport">
         
             <font size=5>
-			<script type="text/javascript" src='https://drive.google.com/uc?id=1u6DaCmJZGqYgeDDkh_fRD5LYtRcfs3FA&export=download'></script>
-			<script type="text/javascript" src='https://drive.google.com/uc?id=1MT5HSoYYckapJfPsy7KeJC5cFeqBssNF&export=download'></script>
-			<script type="text/javascript" src='https://drive.google.com/uc?id=1C_BvSvvkLjG-dUmEsu7za2sXbUlw1AD-&export=download'></script>
-			<script type="text/javascript" src='https://drive.google.com/uc?id=1oa817ux5TkrwRNXfieRH4nTP1D2Omj7O&export=download'></script>
+			<script type="text/javascript" src='https://github.com/RTemiy/bloody_trail/blob/76a506620c5b32f7a5ddd8048968090360dc242c/Interface.js'></script>
+			<script type="text/javascript" src='https://github.com/RTemiy/bloody_trail/blob/76a506620c5b32f7a5ddd8048968090360dc242c/Items.js'></script>
+			<script type="text/javascript" src='https://github.com/RTemiy/bloody_trail/blob/76a506620c5b32f7a5ddd8048968090360dc242c/Story.js'></script>
+			<script type="text/javascript" src='https://github.com/RTemiy/bloody_trail/blob/76a506620c5b32f7a5ddd8048968090360dc242c/Main.js'></script>
         
     </body>
 </html>
