--- a/gitindex.html
+++ b/gitindex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Bloody Trail</title>
-     <link rel="shortcut icon" href="https://rtemiy.github.io/bloody_trail/favicon.png" type="image/png">
+     <link rel="shortcut icon" href="https://rtemiy.github.io/bloody_trail/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" type="text/css" href="https://rtemiy.github.io/bloody_trail/style.css">
 </head>
 <body width=400 background="black">
