--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Bloody Trail</title>
-    <link rel="stylesheet" type="text/css" href="/storage/emulated/0/BT/style.css">
+     <link rel="shortcut icon" href="https://rtemiy.github.io/bloody_trail/Images/favicon.jpg" type="image/jpg">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body width=400 background="black">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8; initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" name="viewport">
     <font size=3>
-        <script type="text/javascript" src='/storage/emulated/0/BT/entities.js'></script>
-        <script type="text/javascript" src='/storage/emulated/0/BT/interface.js'></script>
-        <script type="text/javascript" src='/storage/emulated/0/BT/script.js'></script>
-        <script type="text/javascript" src='/storage/emulated/0/BT/main.js'></script>
+        <script type="text/javascript" src='entities.js'></script>
+        <script type="text/javascript" src='interface.js'></script>
+        <script type="text/javascript" src='script.js'></script>
+        <script type="text/javascript" src='main.js'></script>
     </body>
 </html>
