--- a/gitindex.html
+++ b/gitindex.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title>Bloody Trail</title>
+     <link rel="manifest" href="manifest.json">
      <link rel="shortcut icon" href="Images/favicon.jpg" type="image/jpg">
-    <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 <body width=400 background="black">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8; initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" name="viewport">
